# wdb-metadata

./: .arcconfig  .arclint  .gitignore  Makefile.am  NEWS  README  autogen.sh  configure.ac
config/m4/: wdb.m4  wdb_boost.m4  wdb_cppunit.m4  wdb_cxx.m4  wdb_database_install.m4  wdb_docbook.m4  wdb_geos.m4  wdb_log4cpp.m4  wdb_postgres.m4  wdb_proj.m4  wdb_readline.m4
config/mk/: debian.mk
debian_files/: README.Debian  changelog  config  control  copyright  postinst  postrm  prerm  rules  templates
etc/: metadata.mk  wdbMetadata.in.sql  wdb_dataprovider.in.sql  wdb_namespace.in.sql  wdb_parameter.in.sql  wdb_party.in.sql  wdb_placepoint.in.sql  wdb_placeregulargrid.in.sql  wdb_spatial_ref_sys.in.sql
install/: install_metadata.in.sh  metadata.mk  uninstall_metadata.in.sh
